--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,17 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.example.local
+# Sora2 API configuration files
+*.env.sora2
+# API key files
+api_key.txt
+keys.json
 
 # Spyder project settings
 .spyderproject
